Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log: 
----------------------------------------------------------------------
----------------------------------------------------------------------

- Removed all the old style PHP 4 constructors (Class name functions)
- Add multiple currency support to Payflow Pro gateway
- Fixed order_confirmation_email() declaration to match it's parent.(Warnings)
- In USPS shipping added maximum box weights to flat rate boxes to improve calculating the number of boxes needed.

2.8.8 - 7/15/2013 - Aaron Edwards, Arnold, Marko Miljus
----------------------------------------------------------------------
- Add SKU's to admin new order notification email
- Fixed a rounding error with Paypal chained and Tax Inclusive pricing
- Add support for Ireland locale in paypal and not require postal code
- Add support for CAD, EUR and GBP to Authorize.net AIM gateway
- Add support for GBP to Stripe gateway
- Fix store count on global checkout confirmation screen
- Fix coupons datepicker
- Added process_shipping_form call to shipping_sub_options() so that custom fields that can affect shipping will be read. (ie Resedential in FedEx)
- Make custom column code more efficient - props @michael_cannon
- Add a note to table rate shipping that it uses the pre-tax order total
- Add Serbia and Montenegro country codes
- Add mp_product_title() template function
- Add mp_product_description template function
- Add mp_product_meta template function

2.8.7 - 5/24/2013 - Aaron Edwards
----------------------------------------------------------------------
- Make order and payment history times adjust dynamically for the site timezone
- Add Paymill gateway (beta)
- Fix encoded discount display in confirmation emails and PayPal
- Fix products display reverting to grid in list mode when ajax filters are used
- Fix undefined filter_post_kses error for subsite admins in multisite in Manual Payments and Cubepoints gateways